# server/v1/api/user.route.ts
@@ -1,71 +1,21 @@
-// import express from 'express';
-// import validate from 'express-validation';
-// import expressJwt from 'express-jwt';
-// import paramValidation from '../../../config/param-validation';
-// import userCtrl from '../application/user.controller';
-// import config from '../../../config/config';
-// import upload from '../../../config/aws';
+import express  = require('express');
+import validate = require('express-validation');
+import expressJwt = require('express-jwt');
+import userController from '../application/user.controller';
 
-// const router = express.Router(); // eslint-disable-line new-cap
+const router = express.Router(); // eslint-disable-line new-cap
 
-// router.route('/')
-//   /** GET /v1/users - Get list of users */
-//   .get(expressJwt({ secret: config.jwtSecret }), userCtrl.list)
+/**
+ * GET /api/carrera
+ */
+router.route('/')
+  .get(userController.list)
+  .post(userController.create);
 
-//   /** POST /v1/users - Create new user */
-//   .post(
-//     validate(paramValidation.createUser),
-//     userCtrl.create);
+router.route('/:username')
+  .get(userController.get);
 
-// router.route('/:userId')
-//   /** GET /v1/users/:userId - Get user */
-//   .get(expressJwt({ secret: config.jwtSecret }), userCtrl.get)
+router.route('/auth')
+  .post(userController.authenticate);
 
-//   /** PUT /v1/users/:userId - Update user */
-//   .put(
-//     expressJwt({ secret: config.jwtSecret }),
-//     validate(paramValidation.updateUser),
-//     userCtrl.update)
-
-//   /** DELETE /v1/users/:userId - Delete user */
-//   .delete(expressJwt({ secret: config.jwtSecret }), userCtrl.remove);
-
-// router.route('/password/change')
-//   // POST /v1/users/password/change - Change Password
-//   .post(
-//     validate(paramValidation.passwordChange),
-//     userCtrl.changePassword);
-
-// router.route('/biography')
-//   /** POST v1/users/biography */
-//   .post(
-//     expressJwt({ secret: config.jwtSecret }),
-//     validate(paramValidation.updateBio),
-//     userCtrl.updateBio
-//   );
-
-// router.route('/picture')
-//   /** POST v1/users/picture */
-//   .post(
-//     expressJwt({ secret: config.jwtSecret }),
-//     upload.single('profile'),
-//     userCtrl.updatePicture
-//   );
-// router.route('/follow')
-//   /** POST v1/users/follow */
-//   .post(
-//     expressJwt({ secret: config.jwtSecret }),
-//     validate(paramValidation.followUser),
-//     userCtrl.followUser
-//   );
-// router.route('/unfollow')
-//   /** POST v1/users/unfollow */
-//   .post(
-//     expressJwt({ secret: config.jwtSecret }),
-//     validate(paramValidation.followUser),
-//     userCtrl.unfollowUser
-//   );
-// /** Load user when API with userId route parameter is hit */
-// router.param('userId', userCtrl.load);
-
-// export default router;
+export default router;
