# server/v1/domain/user.model.ts
@@ -1,8 +1,12 @@
 export class User {
+
+  username: string;
+  password: string;
   email: string;
 
-  constructor(email: string) {
-    this.email = email;
+  constructor(username: string, password: string) {
+    this.username = username;
+    this.password = password;
   }
 
   validateEmailAdress(): boolean {
